ostro.conf: swupd update against stable milestones
The previous approach reused content from the latest build. The goal
was to make the build as fast as possible by maximizing reuse. In
practice, building against latest master build takes 53 minutes
for intel-corei7-64 and 64 minutes against the 1.0 milestone.

However, current Ostro OS release procedures do not guarantee that the
"builds" directory is kept around and therefore reusing content from
it is not currently possible. These procedures could be changed, but
until then we have to use the "milestone" directory.

There's another advantage of this approach: when a format change is
necessary, the current build becomes a stepping stone in the upgrade
path for old releases. Clients have to update to the build before they
can proceed to more recent builds. If the build turns out to be
unstable, it can't be made available, and (as things stand now) old
clients wouldn't be able to update. It should be possible to solve
this, but it will require further work. In the meantime, only building
against released builds sidesteps the issue.

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -29,9 +29,12 @@ OSTRO_SDK_UPDATE_URL ??= "https://download.ostroproject.org/builds/ostro-os/late
 #
 # The version URL determines what the client picks as the version that it updates to.
 # The content URL must have all builds ever produced and is expected to also
-# have the corresponding version information.
+# have the corresponding version information. In Ostro OS, only content published
+# as milestone is guranteed to be preserved. Therefore we cannot use the build
+# artifacts from the previous build and have to fall back to the much older previous
+# milestone, which is less efficient.
 SWUPD_VERSION_URL ?= "https://download.ostroproject.org/updates/ostro-os/milestone/${MACHINE}/${SWUPD_IMAGE_PN}"
-SWUPD_CONTENT_URL ?= "https://download.ostroproject.org/updates/ostro-os/builds/${MACHINE}/${SWUPD_IMAGE_PN}"
+SWUPD_CONTENT_URL ?= "https://download.ostroproject.org/updates/ostro-os/milestone/${MACHINE}/${SWUPD_IMAGE_PN}"
 
 # Must match the certificate used by the version and content server.
 SWUPD_PINNED_PUBKEY ?= "${META_OSTRO_BASE}/files/ostroprojectorg.key"
